add seed file and update README.md
