# cmd/api/handlers/order.go
@@ -18,89 +18,96 @@ func NewOrderHandler(service contracts.OrderService) *OrderHandler {
 	return &OrderHandler{Service: service}
 }
 
-// GetOrders godoc
-// @Summary Get all orders
-// @Description Get a list of all orders
-// @Tags orders
-// @Produce json
-// @Success 200 {object} helpers.ApiResponse{data=dto.GetOrderResponse}
-// @Failure 500 {object} helpers.ApiResponse{message=string,success=bool}
-// @Router /orders [get]
+// CreateOrder godoc
+//
+//	@Summary		Create a new order
+//	@Description	Create a new order
+//	@Tags			orders
+//	@Security		JWT
+//	@Accept			json
+//	@Produce		json
+//	@Param			order	body		dto.CreateOrderRequest	true	"Order create request"
+//	@Success		201		{object}	helpers.ApiResponse{data=dto.CreateOrderResponse}
+//	@Failure		500		{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Router			/orders [post]
 func (h *OrderHandler) CreateOrder(c echo.Context) error {
-
+	userID := helpers.ContextGetUser(c).ID
 	req := c.Get("validatedDTO").(*dto.CreateOrderRequest)
-	// FIXME: create order for a user
-	resp, err := h.Service.CreateOrder(req)
+
+	resp, err := h.Service.CreateOrder(userID, req)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to create order"})
+		return helpers.HandleError(c, err)
 	}
 
 	return c.JSON(http.StatusCreated, resp)
 }
 
-// GetOrder godoc
-// @Summary Get an order by ID
-// @Description Get details of an order by ID
-// @Tags orders
-// @Produce json
-// @Param id path string true "Order ID"
-// @Success 200 {object} helpers.ApiResponse{data=dto.GetOrderResponse}
-// @Failure 400 {object} helpers.ApiResponse{message=string,success=bool,data=map[string]string}
-// @Failure 404 {object} helpers.ApiResponse{message=string,success=bool}
-// @Failure 500 {object} helpers.ApiResponse{message=string,success=bool}
-// @Router /orders/{id} [get]
+// GetUserOrders godoc
+//
+//	@Summary		Get all orders for authenticated user
+//	@Description	Get all orders for authenticated user
+//	@Tags			orders
+//	@Security		JWT
+//	@Produce		json
+//	@Success		200		{object}	helpers.ApiResponse{data=[]dto.GetOrderResponse}
+//	@Failure		500		{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Router			/orders/me [get]
 func (h *OrderHandler) GetOrders(c echo.Context) error {
-	authUser := helpers.ContextGetUser(c)
-	orders, err := h.Service.GetOrders(authUser.ID)
+	userID := helpers.ContextGetUser(c).ID
+	orders, err := h.Service.GetOrders(userID)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to retrieve orders"})
+		return helpers.HandleError(c, err)
 	}
 
-	return c.JSON(http.StatusOK, orders)
+	return c.JSON(http.StatusOK, helpers.BuildResponse("orders fetched", orders))
 }
 
-// UpdateOrder godoc
-// @Summary Update an order
-// @Description Update an order's details
-// @Tags orders
-// @Accept json
-// @Produce json
-// @Param id path string true "Order ID"
-// @Param order body dto.UpdateOrderRequest true "Order update request"
-// @Success 200 {object} helpers.ApiResponse{data=dto.UpdateOrderResponse}
-// @Failure 400 {object} helpers.ApiResponse{message=string,success=bool,data=map[string]string}
-// @Failure 401 {object} helpers.ApiResponse{message=string,success=bool}
-// @Failure 403 {object} helpers.ApiResponse{message=string,success=bool}
-// @Failure 500 {object} helpers.ApiResponse{message=string,success=bool}
-// @Router /orders/{id} [put]
-func (h *OrderHandler) UpdateOrder(c echo.Context) error {
+// UpdateOrderStatus godoc
+//
+//	@Summary		Update order status
+//	@Description	Update the status of an order by ID
+//	@Tags			admin
+//	@Produce		json
+//	@Security		JWT
+//	@Param			id		path	string					true	"Order ID"
+//	@Param			status	body	dto.UpdateOrderStatusRequest	true	"Order status update request"
+//	@Success		200		{object}	helpers.ApiResponse{data=dto.UpdateOrderStatusResponse}
+//	@Failure		400		{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Failure		401		{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Failure		403		{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Failure		500		{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Router			/orders/{id}/status [put]
+func (h *OrderHandler) UpdateOrderStatus(c echo.Context) error {
 	id := c.Param("id")
-	req := c.Get("validatedDTO").(*dto.UpdateOrderRequest)
+	req := c.Get("validatedDTO").(*dto.UpdateOrderStatusRequest)
 
-	resp, err := h.Service.UpdateOrder(id, req)
+	resp, err := h.Service.UpdateOrderStatus(id, req)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to update order"})
+		return helpers.HandleError(c, err)
 	}
 
-	return c.JSON(http.StatusOK, resp)
+	return c.JSON(http.StatusOK, helpers.BuildResponse("order status updated", resp))
 }
 
-// DeleteOrder godoc
-// @Summary Delete an order
-// @Description Delete an order by ID
-// @Tags orders
-// @Produce json
-// @Param id path string true "Order ID"
-// @Success 204 {object} helpers.ApiResponse{}
-// @Failure 400 {object} helpers.ApiResponse{message=string,success=bool,data=map[string]string}
-// @Failure 401 {object} helpers.ApiResponse{message=string,success=bool}
-// @Failure 403 {object} helpers.ApiResponse{message=string,success=bool}
-// @Failure 500 {object} helpers.ApiResponse{message=string,success=bool}
-// @Router /orders/{id} [delete]
+// CancelOrder godoc
+//
+//	@Summary		Cancel an order
+//	@Description	Cancel an order by ID
+//	@Tags			orders
+//	@Produce		json
+//	@Security		JWT
+//	@Param			id	path	string	true	"Order ID"
+//	@Success		204	{object}	helpers.ApiResponse{}
+//	@Failure		400	{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Failure		401	{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Failure		403	{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Failure		500	{object}	helpers.ApiResponse{message=string,success=bool}
+//	@Router			/orders/{id}/cancel [put]
 func (h *OrderHandler) CancelOrder(c echo.Context) error {
 	id := c.Param("id")
-	if err := h.Service.CancelOrder(id); err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to cancel order"})
+	userID := helpers.ContextGetUser(c).ID
+	if err := h.Service.CancelOrder(id, userID); err != nil {
+		return helpers.HandleError(c, err)
 	}
 
 	return c.NoContent(http.StatusNoContent)
